# BigQuery

./: .env.example  .env.template  .gitignore  COMPETITION_SUBMISSION_COMPLETE.md  FINAL_TESTING_REPORT.txt  LICENSE  Makefile  README.md  SYSTEM_SUMMARY.md  SYSTEM_VALIDATION_REPORT.md  TODO.md  TODO_PYLANCE_FIXES.md  activate_venv.bat  cloudbuild.yaml  docker-compose.yml  fix_venv.py  pyproject.toml  requirements-dev.txt  requirements.txt
credentials/: .gitkeep
data/sample_data/street_images/: .gitkeep
docs/: ARCHITECTURE.md  BIGQUERY_AI_FEEDBACK.md  BLOG_POST.md
docs/datasets/: PROFESSIONAL_DATASETS_GUIDE.md  README.md  REAL_DATASETS_GUIDE.md
infrastructure/docker/: Dockerfile.api  Dockerfile.processor
infrastructure/kubernetes/: namespace.yaml  simple-deployments.yaml
infrastructure/kubernetes/api-gateway/: deployment.yaml
infrastructure/kubernetes/monitoring/: deployment.yaml
infrastructure/kubernetes/pricing-engine/: deployment.yaml
infrastructure/kubernetes/real-time-processor/: deployment.yaml
infrastructure/terraform/: bigquery.tf  cloud-functions.tf  cloud-storage.tf  main.tf  networking.tf  outputs.tf  pubsub.tf  variables.tf  vertex-ai.tf
infrastructure/terraform-storage/: main.tf  variables.tf
scripts/: deploy_k8s_applications.bat  deploy_k8s_applications.ps1  deploy_storage_buckets.bat  deploy_storage_buckets.sh  deploy_storage_buckets_improved.bat  deploy_storage_buckets_simple.bat  install_terraform.bat  install_terraform.ps1
scripts/data/: download_datasets.py  free_dataset_downloader.py  upload_to_gcs.py
scripts/setup/: setup_environment.bat  setup_environment.sh
scripts/validation/: final_validation.py  system_validation.py  test_api_endpoints.py  validate_datasets.py
src/services/: data_ingestion.py
src/services/api-gateway/: main.py
src/services/api-gateway/routers/: pricing.py
src/services/data-ingestion/: __init__.py  main.py
src/services/data-ingestion/collectors/: __init__.py  street_image_dataset_collector.py
src/services/data-ingestion/connectors/: __init__.py  competitor_connector.py  street_camera_connector.py  traffic_connector.py  weather_connector.py
src/services/data-ingestion/transformers/: __init__.py  image_transformer.py  location_transformer.py  weather_transformer.py
src/services/image-processor/: main.py
src/services/image-processor/processors/: accessibility_analyzer.py  activity_classifier.py  crowd_detector.py
src/services/image-processor/utils/: gcp_utils.py  image_utils.py
src/services/pricing-engine/: __init__.py  main.py
src/services/pricing-engine/engines/: __init__.py  competitor_analyzer.py  demand_predictor.py  price_calculator.py
src/services/pricing-engine/strategies/: __init__.py  ab_test_strategy.py  surge_strategy.py
src/services/pricing-engine/validators/: __init__.py  business_rules.py  price_validator.py
src/services/stream-processor/: main.py
src/shared/clients/: bigquery_client.py  cloud_storage_client.py  vertex_ai_client.py
src/shared/config/: gcp_config.py  ml_config.py  settings.py  settings_fixed.py
src/shared/utils/: cache_manager.py  cache_utils.py  error_handling.py  error_handling_fixed.py  gcp_utils.py  logging_utils.py  monitoring_utils.py
tests/integration/: test_bigquery_integration.py  test_street_camera_datasets.py
tests/unit/: test_pricing_engine.py
ui/: README.md  server.js  start-ui.bat  test-ui-system.js
