[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-pricing-intelligence"
version = "1.0.0"
description = "Dynamic Pricing with Multimodal Geospatial Intelligence"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Dynamic Pricing Team", email = "team@dynamic-pricing.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    # Core Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    
    # Google Cloud Platform
    "google-cloud-bigquery==3.13.0",
    "google-cloud-storage==2.10.0",
    "google-cloud-pubsub==2.18.4",
    "google-cloud-functions==1.16.0",
    "google-cloud-aiplatform==1.38.1",
    "google-cloud-monitoring==2.16.0",
    "google-cloud-logging==3.8.0",
    
    # Data Processing - Updated to newer version for better PEP 517 support
    "apache-beam[gcp]==2.52.0",
    "pandas==2.1.3",
    "numpy>=1.14.3,<1.25.0",
    "pyarrow>=3.0.0,<12.0.0",
    
    # Image Processing and ML
    "opencv-python==4.8.1.78",
    "tensorflow==2.15.0",
    "torch==2.1.1",
    "torchvision==0.16.1",
    "Pillow==10.1.0",
    "scikit-image==0.22.0",
    
    # Database and Caching
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    
    # HTTP and API
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    
    # Authentication and Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    
    # Monitoring and Logging
    "prometheus-client==0.19.0",
    "structlog==23.2.0",
    "sentry-sdk==1.38.0",
    
    # Configuration and Environment
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "click==8.1.7",
    
    # Data Validation
    "marshmallow==3.20.1",
    "cerberus==1.3.5",
    
    # Async and Concurrency
    "aiofiles==23.2.1",
    
    # Utilities
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    # Note: uuid removed as it's built into Python 3.7+
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0",
    "pytest-benchmark==4.0.0",
    
    # Code Quality
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pylint==3.0.3",
    "bandit==1.7.5",
    
    # Documentation
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0",
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
    
    # Development Tools
    "pre-commit==3.6.0",
    "tox==4.11.4",
    "coverage==7.3.2",
    "factory-boy==3.3.0",
    
    # API Testing
    "respx==0.20.2",
    
    # Performance Testing
    "locust==2.17.0",
    
    # Database Testing
    "pytest-postgresql==5.0.0",
    "alembic==1.13.0",
    
    # Mocking and Fixtures
    "responses==0.24.1",
    "freezegun==1.2.2",
    "faker==20.1.0",
    
    # Type Checking
    "types-requests==2.31.0.10",
    "types-PyYAML==6.0.12.12",
    "types-python-dateutil==2.8.19.14",
    
    # Jupyter for Analysis
    "jupyter==1.0.0",
    "ipykernel==6.26.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    
    # Security Testing
    "safety==2.3.5",
    "semgrep==1.45.0",
    
    # Infrastructure Testing
    "terraform-compliance==1.3.44",
    "checkov==3.1.34",
]

[project.urls]
Homepage = "https://github.com/dynamic-pricing/intelligence"
Documentation = "https://docs.dynamic-pricing.com"
Repository = "https://github.com/dynamic-pricing/intelligence.git"
"Bug Tracker" = "https://github.com/dynamic-pricing/intelligence/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
